# project_request_scripts

./: .gitignore  README.md  get_ids.py  pyproject.toml  requirements.txt  run_sower_job.py
pfb_to_zip/: README.md  __init__.py  config.py  config_inrg.py  config_instruct.py  config_interact.py  db_config.py  pfb_exporter.py  pfb_to_zip.py  seed_datapoints.py  upload_to_s3.py
pfb_to_zip/configs/: config_all.py  config_inrg.py  config_instruct.py  config_magic.py
pfb_to_zip/templates/gmkf/: README.md
pfb_to_zip/templates/imaging_data_commons/: README.md
pfb_to_zip/templates/imaging_data_commons/src/: main.py  pyproject.toml
pfb_to_zip/templates/target_gdc/: README.md
