[tool.poetry]
name = "project-request-scripts"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "pfb_to_zip" }
]

[tool.poetry.dependencies]
python = "^3.9.0"
requests = "^2.32.3"
gitpython = "^3.1.44"
dictionaryutils-pcdc = {git = "https://github.com/chicagopcdc/dictionaryutils.git", rev = "rename-poetry-project"}
pypfb-pcdc = {git = "https://github.com/paulmurdoch19/pypfb.git", rev = "rename-poetry-project"}
pandas = "^2.2.3"


[tool.poetry.dev-dependencies]
pytest-shutil = "^1.8.1"

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.core.masonry.api"