[tool.poetry]
name = "project-request-scripts"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "pfb_to_zip" }
]

[tool.poetry.dependencies]
python = ">=3.13,<4"

requests = "^2.32.3"
gitpython = "^3.1.44"

dictionaryutils = { git = "https://github.com/chicagopcdc/dictionaryutils.git", rev = "2026.05" }
pypfb = { git = "https://github.com/chicagopcdc/pypfb.git", rev = "0.6.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
