[tool.poetry]
name = "idc-integration"
version = "0.1.0"
description = "A Python project using idc-index"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# packages = [{ include = "my_project" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
idc-index = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
